# pyscora-wrangler

./: .gitignore  LICENSE  README.md  mp_upload_simulation.ipynb  mt_upload_simulation.ipynb  pyproject.toml  simulation_data.csv
.github/workflows/: pr-style-check.yml  publish.yml  test.yml
pyscora_wrangler/: __init__.py  constants.py  transform.py  upload.py  utils.py
pyscora_wrangler/aws/: README.md  __init__.py  athena.py  constants.py  utils.py
pyscora_wrangler/aws/athena/: __init__.py
pyscora_wrangler/aws/cognito/: __init__.py
pyscora_wrangler/aws/dynamodb/: __init__.py
pyscora_wrangler/aws/secretsmanager/: __init__.py
pyscora_wrangler/constants/: colors.py
pyscora_wrangler/ldap/: README.md  __init__.py
pyscora_wrangler/ldap/service/: __init__.py
pyscora_wrangler/resources/aws/: __init__.py  constants.py  utils.py
pyscora_wrangler/resources/aws/cognito/: __init__.py
pyscora_wrangler/utils/: misc.py  modules.py
test/: transform.py  upload.py
test_local/: transform.py  upload.py
