[tool.poetry]
name = "pyscora-wrangler"
version = "1.2.2"
description = "Python lib for DE"
authors = ["Oncase <contato@oncase.com.br>"]
maintainers = ["Guilherme Morone <guilherme.morone@oncase.com.br>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oncase/pyscora-wrangler"
repository = "https://github.com/oncase/pyscora-wrangler"
keywords = ["wrapper", "scora", "python", "data_engineering"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
boto3 = "^1.26.108"
awswrangler = "^2.20.1"
asyncio = "^3.4.3"
pyathena = "^2.23.0"
pyyaml = "^6.0"
ldap3 = "^2.9.1"
typeguard = "^3.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"
log_cli=true
log_cli_level="DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%d-%m-%Y %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
